fixed centering indicator in Faq on Safari

--- a/next/src/components/_global/Faq/Faq.module.scss
+++ b/next/src/components/_global/Faq/Faq.module.scss
@@ -63,8 +63,9 @@
         height: 16px;
         background-color: rgba(55, 101, 120, 0.5);
         border-radius: 50%;
-        display: grid;
-        place-items: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin-top: 6px;
         span {
           position: absolute;
